--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.1",
     "@gluestack-ui/nativewind-utils": "^0.0.3",
+    "@gluestack-ui/overlay": "^0.1.14",
+    "@gluestack-ui/toast": "^1.0.4",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^4.0.1",
