--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-reanimated": "~3.6.0",
+    "react-native-reanimated": "3.6.2",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.1"
   },
